--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -14,14 +14,14 @@ exec:
 
 # Where should any generated models go?
 model:
-  filename: models/models.go
-  package: models
+  filename: types/types.go
+  package: types
 
 # Where should the resolver implementations go?
 resolver:
   layout: follow-schema
-  dir: api
-  package: api
+  dir: handlers
+  package: handlers
 
 # Optional: turn on use `gqlgen:"fieldName"` tags in your models
 # struct_tag: json
@@ -35,7 +35,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-  - "ms.api/models"
+  - "ms.api/types"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
