--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -34,8 +34,8 @@ resolver:
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
-autobind:
-  - "ms.api/types"
+#autobind:
+#  - "ms.api/types"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
