feat: ms.onfido Integration.
- Added graphql method to consume rpc method for ms.onfido getApplicantSDKToken
- WIP: Ability to re-connect any disconnected grpc client due to downtime and manage message to api's own clients (mobile app, etc. )
- Add git actions
- Added onfido.proto
- Updated gqlgen.yml to reflect onfido service types

Closes: BANK-461/feat

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -50,3 +50,7 @@ models:
       - github.com/99designs/gqlgen/graphql.Int32
   DateTime:
     model: ms.api/libs/DateTime.DateTime
+  ApplicantSDKTokenRequest:
+    model: ms.api/protos/pb/onfidoService.ApplicantSDKTokenRequest
+  ApplicantSDKTokenResponse:
+    model: ms.api/protos/pb/onfidoService.ApplicantSDKTokenResponse
