--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -48,10 +48,14 @@ models:
       - github.com/99designs/gqlgen/graphql.Int64
   DateTime:
     model: ms.api/libs/DateTime.DateTime
+  CDD:
+    model: ms.api/protos/pb/kycService.Cdd
+  Address:
+      model: ms.api/protos/pb/kycService.Address
+  Applicant:
+    model: ms.api/protos/pb/kycService.Applicant
   Application:
     model: ms.api/protos/pb/kycService.Application
-  CDD:
-      model: ms.api/protos/pb/kycService.Cdd
   ApplicantSDKTokenRequest:
     model: ms.api/protos/pb/onfidoService.ApplicantSDKTokenRequest
   ApplicantSDKTokenResponse:
