--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -50,12 +50,12 @@ models:
     model: ms.api/libs/DateTime.DateTime
   CDD:
     model: ms.api/protos/pb/kycService.Cdd
+  KYC:
+    model: ms.api/protos/pb/kycService.Kyc
   Address:
       model: ms.api/protos/pb/kycService.Address
   Applicant:
     model: ms.api/protos/pb/kycService.Applicant
-  Application:
-    model: ms.api/protos/pb/kycService.Application
   ApplicantSDKTokenRequest:
     model: ms.api/protos/pb/onfidoService.ApplicantSDKTokenRequest
   ApplicantSDKTokenResponse:
