--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     restart: on-failure
     environment:
       PORT: 2002
-      DATABASE_URL: mongodb://root:root@mongodb:27017
+      DATABASE_URL: mongodb+srv://roava-testing:rMgdGIuyYOix0vV9@testing.bul98.gcp.mongodb.net/testing #mongodb://root:root@mongodb:27017
       PULSAR_URL: pulsar+ssl://pulsar.roava.io:6651
       PULSAR_TLS_CERT: ${PULSAR_TLS_CERT}
       DATABASE_NAME: roava
