--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
 
   ms.verify:
     container_name: ms.verify
-    image: gcr.io/labs-271617/roava.io/services/ms.verify
+    image: gcr.io/labs-271617/roava.io/services/ms.verify #localhost:15000/ms.verify
     restart: on-failure
     environment:
       PORT: 2000
@@ -45,7 +45,7 @@ services:
 
   ms.onboarding:
     container_name: ms.onboarding
-    image: gcr.io/labs-271617/roava.io/services/ms.onboarding
+    image: gcr.io/labs-271617/roava.io/services/ms.onboarding #localhost:15000/ms.onboarding
     restart: on-failure
     environment:
       PORT: 2001
@@ -79,7 +79,7 @@ services:
 
   ms.person:
     container_name: ms.person
-    image: localhost:15000/ms.person # gcr.io/labs-271617/roava.io/services/ms.person
+    image:  gcr.io/labs-271617/roava.io/services/ms.person # localhost:15000/ms.person
     restart: on-failure
     environment:
       PORT: 2003
@@ -113,7 +113,7 @@ services:
 
   ms.auth:
     container_name: ms.auth
-    image: localhost:15000/ms.auth # gcr.io/labs-271617/roava.io/services/ms.auth
+    image: gcr.io/labs-271617/roava.io/services/ms.auth # localhost:15000/ms.auth
     restart: on-failure
     environment:
       PORT: 2005
