--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,52 +3,111 @@ on:
   push:
     branches:
       - develop
+      - staging
       - master
 
   pull_request:
-    branches: [ master,develop ]
+    branches: [master, staging, develop]
 
-
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # The "lint" workflow
+  lint:
+    name: Lint
 
-  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Setup Go
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.15 # The Go version to download (if necessary) and use.
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.14
-      id: go
+      # # cache go modules
+      # - name: Cache go modules
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: ~/go/pkg/mod
+      #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
+      #     restore-keys: ${{ runner.os }}-go-
 
-    - name: Cache go modules
-      uses: actions/cache@v1
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-        restore-keys: ${{ runner.os }}-go-
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check out code
+        uses: actions/checkout@v2
 
-    - name: Check out code
-      uses: actions/checkout@v2
+      # Install all the dependencies
+      - name: Get and verify dependencies
+        env:
+          GOSUMDB: "off"
+          GOPROXY: "direct"
+        run: go mod download && go mod verify
 
-    - name: Get and verify dependencies
-      env:
-        GOSUMDB: "off"
-        GOPROXY: "direct"
-      run: go mod download && go mod verify
+      # Run fmt of code
+      - name: check formatting
+        run: make fmt-check
 
-    - name: Check formatting
-      run: make fmt-check
+      # Run vet & lint on the code
+      - name: Run code vet
+        run: make vet
 
-    - name: Build app to make sure there are zero issues
-      run: go build
+      # Run vet & lint on the code
+      - name: Run code lint
+        run: make lint
 
-    - name: Run go vet
-      run: go vet ./...
+  # The "TEST" workflow
+  test:
+    name: Test
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: [lint] # Only run this workflow when "lint" workflow succeeds
 
-    - name: Run linting
-      run: make lint
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Setup Go
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.15 # The Go version to download (if necessary) and use.
 
-    - name: Run all tests
-      run: go test -v ./... -cover
+      # # cache go modules
+      # - name: Cache go modules
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: ~/go/pkg/mod
+      #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
+      #     restore-keys: ${{ runner.os }}-go-
+
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      # Run unit tests + coverage
+      - name: Run unit tests
+        run: make test
+
+  # The "TEST" workflow
+  build:
+    name: Build
+
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Setup Go
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.15 # The Go version to download (if necessary) and use.
+
+          # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check out code
+        uses: actions/checkout@v2
+
+        # Run build of the application
+      - name: Run build
+        run: go build .
