--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,9 +1,9 @@
-name: Push to GCR and create Github release
-
+name: Build, deploy to GCR
 on:
   push:
+    # branches: [ master, staging, develop, release/* ]
     tags:
-      - '*'
+      - "*"
 
 env:
   PROJECT_ID: ${{ secrets.RUN_PROJECT }}
@@ -14,63 +14,168 @@ env:
   REGISTRY_HOSTNAME: gcr.io/${{ secrets.RUN_PROJECT }}
 
 jobs:
+  # The "lint" workflow
+  lint:
+    name: Lint
 
-  release:
-    name: Create Release
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    needs: [ build ]
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Setup Go
+      - name: Set up Go
+        uses: actions/setup-go@v2
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: true
+          go-version: ^1.15 # The Go version to download (if necessary) and use.
 
+      # # cache go modules
+      # - name: Cache go modules
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: ~/go/pkg/mod
+      #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
+      #     restore-keys: ${{ runner.os }}-go-
 
-  deploy_to_gcr:
-    name: Deploy tagged docker image to GCR
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      # Install all the dependencies
+      - name: Get and verify dependencies
+        env:
+          GOSUMDB: "off"
+          GOPROXY: "direct"
+        run: go mod download && go mod verify
+
+      # Run fmt of code
+      - name: check formatting
+        run: make fmt-check
+
+      # Run vet & lint on the code
+      - name: Run code vet
+        run: make vet
+
+      # Run vet & lint on the code
+      - name: Run code lint
+        run: make lint
+
+  # The "TEST" workflow
+  test:
+    name: Test
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    needs: [ build ]
+    needs: [lint] # Only run this workflow when "lint" workflow succeeds
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Setup Go
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.15 # The Go version to download (if necessary) and use.
+
+      # # cache go modules
+      # - name: Cache go modules
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: ~/go/pkg/mod
+      #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
+      #     restore-keys: ${{ runner.os }}-go-
+
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      # Run unit tests + coverage
+      - name: Run unit tests
+        run: make test
+
+  # The "TEST" workflow
+  build:
+    name: Build
+
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Setup Go
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.15 # The Go version to download (if necessary) and use.
+
+          # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check out code
+        uses: actions/checkout@v2
+
+        # Run build of the application
+      - name: Run build
+        run: go build .
+
+  deploy:
+    name: Setup, Build, and Deploy
+    runs-on: ubuntu-latest
+    needs: [build] # Only run this workflow when "build" workflow succeeds
+
     steps:
       - name: Get the version
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-      - name: Checkout code
+
+      - name: Get short commit id
+        id: vars
+        run: echo "::set-output name=SHORT_COMMIT_ID::$(git rev-parse --short HEAD)"
+
+      - name: Get branches
+        id: get_branch
+        shell: bash
+        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+
+      - name: Print version
+        run: |
+          echo [github.tag]: ${{ steps.get_version.outputs.VERSION }}
+          echo [github.sha]: ${{ github.sha }}
+          echo [github.ref]: ${{ github.ref }}
+          echo [github.actor]: trigered by $GITHUB_ACTOR
+
+      - name: Checkout
         uses: actions/checkout@v2
+
       # Setup gcloud CLI
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          version: '290.0.1'
+          version: "290.0.1"
           service_account_key: ${{ secrets.RUN_SA_KEY }}
           project_id: ${{ secrets.RUN_PROJECT }}
+
       # Configure docker to use the gcloud command-line tool as a credential helper
       - run: |
           # Set up docker to authenticate
           # via gcloud command-line tool.
           gcloud auth configure-docker
+
+      # Build the Docker image
+      # images name in format - [ORG]/[IMAGE] e.g. roava.io/myimage
+      - name: Build
+        id: build
+        run: |
+          export TAG=`echo ${{ steps.get_version.outputs.VERSION }}`
+          export CONTAINER=`echo $ORG/$IMAGE`
+          docker build -t "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG" \
+          -t "$REGISTRY_HOSTNAME"/"$CONTAINER":"${GITHUB_SHA::8}" \
+          -t "$REGISTRY_HOSTNAME"/"$CONTAINER":"$GITHUB_SHA" \
+            --build-arg GITHUB_SHA="$GITHUB_SHA" \
+            --build-arg GITHUB_REF="$GITHUB_REF" .
+
       # Push the Docker image to Google Container Registry
       # images name in format - [ORG]/[IMAGE] e.g. roava.io/myimage
       # docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"$GITHUB_SHA"
-      - name: Build
-        run: |
-          export TAG=${{ steps.get_version.outputs.VERSION }}
-          export CONTAINER=`echo $ORG/$IMAGE`
-          docker build -t "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG" \
-            --build-arg GITHUB_SHA="$GITHUB_SHA" \
-            --build-arg GITHUB_REF="$GITHUB_REF" .
       - name: Publish
+        id: publish
         run: |
-          export TAG=${{ steps.get_version.outputs.VERSION }}
+          export TAG=`echo ${{ steps.get_version.outputs.VERSION }}`
           export CONTAINER=`echo $ORG/$IMAGE`
-          docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG"
-          docker tag "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG" "$REGISTRY_HOSTNAME"/"$CONTAINER":stable
-          docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":stable
-          docker tag "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG" "$REGISTRY_HOSTNAME"/"$CONTAINER":"latest"
-          docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"latest"
-
+          docker push "$REGISTRY_HOSTNAME"/"$CONTAINER"
