--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -6,12 +6,12 @@ on:
       - "*"
 
 env:
-  PROJECT_ID: ${{ secrets.RUN_PROJECT }}
+  PROJECT_ID: ${{ secrets.PROJECT_EU }}
   GITHUB_SHA: ${{ github.sha }}
   GITHUB_REF: ${{ github.ref }}
   ORG: roava.io/services
   IMAGE: ms.api
-  REGISTRY_HOSTNAME: gcr.io/${{ secrets.RUN_PROJECT }}
+  REGISTRY_HOSTNAME: eu.gcr.io/${{ secrets.PROJECT_EU }}
 
 jobs:
   # The "lint" workflow
@@ -135,7 +135,6 @@ jobs:
           echo [github.sha]: ${{ github.sha }}
           echo [github.ref]: ${{ github.ref }}
           echo [github.actor]: trigered by $GITHUB_ACTOR
-
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -143,7 +142,7 @@ jobs:
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           version: "290.0.1"
-          service_account_key: ${{ secrets.RUN_SA_KEY }}
+          service_account_key: ${{ secrets.SA_EU }}
           project_id: ${{ secrets.RUN_PROJECT }}
 
       # Configure docker to use the gcloud command-line tool as a credential helper
@@ -151,7 +150,6 @@ jobs:
           # Set up docker to authenticate
           # via gcloud command-line tool.
           gcloud auth configure-docker
-
       # Build the Docker image
       # images name in format - [ORG]/[IMAGE] e.g. roava.io/myimage
       - name: Build
@@ -164,7 +162,6 @@ jobs:
           -t "$REGISTRY_HOSTNAME"/"$CONTAINER":"$GITHUB_SHA" \
             --build-arg GITHUB_SHA="$GITHUB_SHA" \
             --build-arg GITHUB_REF="$GITHUB_REF" .
-
       # Push the Docker image to Google Container Registry
       # images name in format - [ORG]/[IMAGE] e.g. roava.io/myimage
       # docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"$GITHUB_SHA"
