--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -143,7 +143,7 @@ jobs:
         with:
           version: "290.0.1"
           service_account_key: ${{ secrets.SA_EU }}
-          project_id: ${{ secrets.RUN_PROJECT }}
+          project_id: ${{ secrets.PROJECT_EU }}
 
       # Configure docker to use the gcloud command-line tool as a credential helper
       - run: |
