--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
+      - name: Setup credentials to access private repo
+        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+
       # Install all the dependencies
       - name: Get and verify dependencies
         env:
@@ -84,6 +87,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
+      - name: Setup credentials to access private repo
+        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+
       # Run unit tests + coverage
       - name: Run unit tests
         run: make test
@@ -107,6 +113,9 @@ jobs:
           # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Check out code
         uses: actions/checkout@v2
+
+      - name: Setup credentials to access private repo
+        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
 
         # Run build of the application
       - name: Run build
