--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -22,6 +22,7 @@ resolver:
   layout: follow-schema
   dir: graph
   package: graph
+  filename_template: "{name}.resolvers.go"
 
 # Optional: turn on use `gqlgen:"fieldName"` tags in your models
 # struct_tag: json
@@ -48,13 +49,3 @@ models:
       - github.com/99designs/gqlgen/graphql.Int64
   DateTime:
     model: ms.api/libs/DateTime.DateTime
-  #CDD:
-    #model: ms.api/protos/pb/kycService.Cdd
-  Address:
-      model: ms.api/protos/pb/cddService.Address
-  Applicant:
-    model: ms.api/protos/pb/cddService.Applicant
-  ApplicantSDKTokenRequest:
-    model: ms.api/protos/pb/onfidoService.ApplicantSDKTokenRequest
-  ApplicantSDKTokenResponse:
-    model: ms.api/protos/pb/onfidoService.ApplicantSDKTokenResponse
