--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -1,17 +1,19 @@
 name: Build, deploy to GCR
 on:
   push:
-    # branches: [ master, staging, develop, release/* ]
-    tags:
-      - "*"
+    branches: [ automate ]
+    # tags:
+    #   - "*"
 
 env:
-  PROJECT_ID: ${{ secrets.PROJECT_EU }}
+  PROJECT_ID: "${{ secrets.PROJECT_EU }}"
   GITHUB_SHA: ${{ github.sha }}
   GITHUB_REF: ${{ github.ref }}
   ORG: roava.io/services
   IMAGE: ms.api
   REGISTRY_HOSTNAME: eu.gcr.io/${{ secrets.PROJECT_EU }}
+  DEPLOY_TYPE: "external"
+  PORT: "9000"
 
 jobs:
   # The "lint" workflow
@@ -182,3 +184,12 @@ jobs:
           export TAG=`echo ${{ steps.get_version.outputs.VERSION }}`
           export CONTAINER=`echo $ORG/$IMAGE`
           docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG"
+
+  deploy-kubernetes:
+    name: Deploy to kubernetes cluster
+    runs-on: [self-hosted, linux, x64, dev]
+    needs: [deploy]
+
+    steps:
+      - name: Deploy service
+        run: deploy "$DEPLOY_TYPE" "$PORT"
