--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -145,6 +145,8 @@ jobs:
           echo [github.sha]: ${{ github.sha }}
           echo [github.ref]: ${{ github.ref }}
           echo [github.actor]: trigered by $GITHUB_ACTOR
+          echo [SA_SHARED]: ${{ secrets.SA_SHARED }}
+          echo [PROJECT_SHARED]: ${{ secrets.PROJECT_SHARED }}
 
       - name: Checkout
         uses: actions/checkout@v2
