--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -18,112 +18,112 @@ env:
 
 jobs:
   # The "lint" workflow
-  lint:
-    name: Lint
+  # lint:
+  #   name: Lint
 
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  #   # The type of runner that the job will run on
+  #   runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Setup Go
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.15 # The Go version to download (if necessary) and use.
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #     # Setup Go
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v2
+  #       with:
+  #         go-version: ^1.15 # The Go version to download (if necessary) and use.
 
-      # # cache go modules
-      # - name: Cache go modules
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-      #     restore-keys: ${{ runner.os }}-go-
+  #     # # cache go modules
+  #     # - name: Cache go modules
+  #     #   uses: actions/cache@v1
+  #     #   with:
+  #     #     path: ~/go/pkg/mod
+  #     #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
+  #     #     restore-keys: ${{ runner.os }}-go-
 
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Check out code
-        uses: actions/checkout@v2
+  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+  #     - name: Check out code
+  #       uses: actions/checkout@v2
 
-      - name: Setup credentials to access private repo
-        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-      # Install all the dependencies
-      - name: Get and verify dependencies
-        env:
-          GOSUMDB: "off"
-          GOPROXY: "direct"
-        run: go mod download && go mod verify
+  #     - name: Setup credentials to access private repo
+  #       run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+  #     # Install all the dependencies
+  #     - name: Get and verify dependencies
+  #       env:
+  #         GOSUMDB: "off"
+  #         GOPROXY: "direct"
+  #       run: go mod download && go mod verify
 
-      # Run fmt of code
-      - name: check formatting
-        run: make fmt-check
+  #     # Run fmt of code
+  #     - name: check formatting
+  #       run: make fmt-check
 
-      # Run vet & lint on the code
-      - name: Run code vet
-        run: make vet
+  #     # Run vet & lint on the code
+  #     - name: Run code vet
+  #       run: make vet
 
-      # Run vet & lint on the code
-      - name: Run code lint
-        run: make lint
+  #     # Run vet & lint on the code
+  #     - name: Run code lint
+  #       run: make lint
 
-  # The "TEST" workflow
-  test:
-    name: Test
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    needs: [lint] # Only run this workflow when "lint" workflow succeeds
+  # # The "TEST" workflow
+  # test:
+  #   name: Test
+  #   # The type of runner that the job will run on
+  #   runs-on: ubuntu-latest
+  #   needs: [lint] # Only run this workflow when "lint" workflow succeeds
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Setup Go
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.15 # The Go version to download (if necessary) and use.
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #     # Setup Go
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v2
+  #       with:
+  #         go-version: ^1.15 # The Go version to download (if necessary) and use.
 
-      # # cache go modules
-      # - name: Cache go modules
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
-      #     restore-keys: ${{ runner.os }}-go-
+  #     # # cache go modules
+  #     # - name: Cache go modules
+  #     #   uses: actions/cache@v1
+  #     #   with:
+  #     #     path: ~/go/pkg/mod
+  #     #     key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
+  #     #     restore-keys: ${{ runner.os }}-go-
 
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Setup credentials to access private repo
-        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+  #     - name: Setup credentials to access private repo
+  #       run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
 
-      - name: Check out code
-        uses: actions/checkout@v2
+  #     - name: Check out code
+  #       uses: actions/checkout@v2
 
-      # Run unit tests + coverage
-      - name: Run unit tests
-        run: make test
+  #     # Run unit tests + coverage
+  #     - name: Run unit tests
+  #       run: make test
 
-  # The "TEST" workflow
-  build:
-    name: Build
+  # # The "TEST" workflow
+  # build:
+  #   name: Build
 
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    needs: [lint, test]
+  #   # The type of runner that the job will run on
+  #   runs-on: ubuntu-latest
+  #   needs: [lint, test]
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Setup Go
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.15 # The Go version to download (if necessary) and use.
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #     # Setup Go
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v2
+  #       with:
+  #         go-version: ^1.15 # The Go version to download (if necessary) and use.
 
-          # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Check out code
-        uses: actions/checkout@v2
+  #         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+  #     - name: Check out code
+  #       uses: actions/checkout@v2
 
-      - name: Setup credentials to access private repo
-        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-        # Run build of the application
-      - name: Run build
-        run: go build .
+  #     - name: Setup credentials to access private repo
+  #       run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+  #       # Run build of the application
+  #     - name: Run build
+  #       run: go build .
 
   deploy:
     name: Setup, Build, and Deploy
