RVA-55|fix: Fix me and person query
- Get Terror from rpc response
- Update tests
- Basic version of docker-compose

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,5 +1,7 @@
 # Exclusions
 sonar.exclusions=graph/generated/**
+sonar.exclusions=graph/mutation.resolvers_test.go
+sonar.exclusions=graph/query.resolvers_test.go
 sonar.exclusions=fakes/**
 sonar.exclusions=mocks/**
 sonar.exclusions=protos/**
