--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.dll
 *.so
 *.dylib
+__debug_bin
 
 # Test binary, built with `go test -c`
 *.test
@@ -17,3 +18,7 @@ vendor/
 tls.crt
 docker-compose.yml
 local-docker-compose.yml
+
+#editors files and directories
+*.code-workspace
+.vscode
